--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -9,10 +9,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - uses: olafurpg/setup-scala@v5
-    - name: Run compile
-      run: sbt compile
-    - name: Run scalafmt
-      run: sbt check
-    - name: Run tests
-      run: sbt test
+    - uses: jodersky/setup-mill@master
+      with:
+        mill-version: 0.8.0
+    - name: Compile
+      run: mill ZioGeolocation.compile
+    - name: Test
+      run: mill ZioGeolocation.test
